--- a/SideMenu.ui
+++ b/SideMenu.ui
@@ -95,6 +95,14 @@
     </widget>
    </item>
    <item>
+    <widget class="QLabel" name="label_4">
+     <property name="text">
+      <string>Ctrl+(Shift)+scroll to zoom.
+Shift+scroll to scroll horizontally.</string>
+     </property>
+    </widget>
+   </item>
+   <item>
     <spacer name="verticalSpacer">
      <property name="orientation">
       <enum>Qt::Vertical</enum>
