--- a/editor/EditorWindow.ui
+++ b/editor/EditorWindow.ui
@@ -29,6 +29,7 @@
     </property>
     <addaction name="actionHost"/>
     <addaction name="actionConnect"/>
+    <addaction name="actionSave"/>
     <addaction name="actionSaveAs"/>
     <addaction name="actionAbout"/>
    </widget>
@@ -42,12 +43,7 @@
   </action>
   <action name="actionSave">
    <property name="text">
-    <string>Save</string>
-   </property>
-  </action>
-  <action name="actionSaveAs">
-   <property name="text">
-    <string>Save Copy</string>
+    <string>Save locally</string>
    </property>
   </action>
   <action name="actionAbout">
@@ -58,6 +54,11 @@
   <action name="actionConnect">
    <property name="text">
     <string>Connect</string>
+   </property>
+  </action>
+  <action name="actionSaveAs">
+   <property name="text">
+    <string>Save as</string>
    </property>
   </action>
  </widget>
