msync pointer, user list on left empty

--- a/editor/SideMenu.ui
+++ b/editor/SideMenu.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>400</width>
-    <height>300</height>
+    <height>573</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -111,17 +111,14 @@ Middle-click drag also scrolls.</string>
     </widget>
    </item>
    <item>
-    <spacer name="verticalSpacer">
-     <property name="orientation">
-      <enum>Qt::Vertical</enum>
+    <widget class="QLabel" name="label_5">
+     <property name="text">
+      <string>Users</string>
      </property>
-     <property name="sizeHint" stdset="0">
-      <size>
-       <width>20</width>
-       <height>40</height>
-      </size>
-     </property>
-    </spacer>
+    </widget>
+   </item>
+   <item>
+    <widget class="QListWidget" name="usersList"/>
    </item>
    <item>
     <layout class="QHBoxLayout" name="horizontalLayout_3">
