--- a/editor/SideMenu.ui
+++ b/editor/SideMenu.ui
@@ -118,7 +118,11 @@ Middle-click drag also scrolls.</string>
     </widget>
    </item>
    <item>
-    <widget class="QListWidget" name="usersList"/>
+    <widget class="QListView" name="userList">
+     <property name="editTriggers">
+      <set>QAbstractItemView::NoEditTriggers</set>
+     </property>
+    </widget>
    </item>
    <item>
     <layout class="QHBoxLayout" name="horizontalLayout_3">
