--- a/src/editor/SideMenu.ui
+++ b/src/editor/SideMenu.ui
@@ -156,6 +156,9 @@
          <property name="selectionBehavior">
           <enum>QAbstractItemView::SelectRows</enum>
          </property>
+         <property name="showGrid">
+          <bool>false</bool>
+         </property>
          <property name="gridStyle">
           <enum>Qt::NoPen</enum>
          </property>
