--- a/src/editor/SideMenu.ui
+++ b/src/editor/SideMenu.ui
@@ -93,9 +93,6 @@
          <verstretch>0</verstretch>
         </sizepolicy>
        </property>
-       <property name="focusPolicy">
-        <enum>Qt::NoFocus</enum>
-       </property>
        <property name="maxLength">
         <number>6</number>
        </property>
@@ -109,11 +106,7 @@
       </widget>
      </item>
      <item>
-      <widget class="QLineEdit" name="beatsField">
-       <property name="focusPolicy">
-        <enum>Qt::NoFocus</enum>
-       </property>
-      </widget>
+      <widget class="QLineEdit" name="beatsField"/>
      </item>
     </layout>
    </item>
