with a bunch of duplication, mouse edit state variant for param vs keyboard editor

--- a/src/editor/SideMenu.ui
+++ b/src/editor/SideMenu.ui
@@ -264,6 +264,9 @@
          <verstretch>0</verstretch>
         </sizepolicy>
        </property>
+       <property name="focusPolicy">
+        <enum>Qt::NoFocus</enum>
+       </property>
       </widget>
      </item>
     </layout>
