--- a/src/editor/EditorWindow.ui
+++ b/src/editor/EditorWindow.ui
@@ -20,7 +20,7 @@
      <x>0</x>
      <y>0</y>
      <width>863</width>
-     <height>21</height>
+     <height>27</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuFile">
@@ -74,6 +74,9 @@
   <action name="actionNewHost">
    <property name="text">
     <string>New &amp;&amp; Host</string>
+   </property>
+   <property name="shortcut">
+    <string/>
    </property>
   </action>
   <action name="actionExit">
