--- a/src/editor/EditorWindow.ui
+++ b/src/editor/EditorWindow.ui
@@ -45,10 +45,16 @@
    <property name="text">
     <string>Open &amp;&amp; Host</string>
    </property>
+   <property name="shortcut">
+    <string>Ctrl+Shift+O</string>
+   </property>
   </action>
   <action name="actionSave">
    <property name="text">
     <string>Save locally</string>
+   </property>
+   <property name="shortcut">
+    <string>Ctrl+S</string>
    </property>
   </action>
   <action name="actionAbout">
@@ -60,10 +66,16 @@
    <property name="text">
     <string>Connect</string>
    </property>
+   <property name="shortcut">
+    <string>Ctrl+O</string>
+   </property>
   </action>
   <action name="actionSaveAs">
    <property name="text">
     <string>Save as</string>
+   </property>
+   <property name="shortcut">
+    <string>Ctrl+Shift+S</string>
    </property>
   </action>
   <action name="actionHelp">
@@ -76,7 +88,7 @@
     <string>New &amp;&amp; Host</string>
    </property>
    <property name="shortcut">
-    <string/>
+    <string>Ctrl+N</string>
    </property>
   </action>
   <action name="actionExit">
